# server/src/controllers/user.go
@@ -16,15 +16,14 @@ func NewUserController(userService services.UserServiceInterface) *UserControlle
 	return &UserController{userService: userService}
 }
 
-// User godoc
+// GetUsers godoc
 //
 //	@Summary		Gets all users
-//	@Description	returns all users
+//	@Description	Returns all users
 //	@ID				get-all-users
-//	@Tags			users
-//	@Accept			json
+//	@Tags			user
 //	@Produce		json
-//	@Success		200	{object}	models.User
+//	@Success		200	{object}	[]models.User
 //	@Router			/api/users/ [get]
 func (u *UserController) GetAllUsers(c echo.Context) error {
 	users, err := u.userService.GetAllUsers()
@@ -35,6 +34,16 @@ func (u *UserController) GetAllUsers(c echo.Context) error {
 	return c.JSON(http.StatusOK, users)
 }
 
+// GetUser godoc
+//
+//		@Summary		Gets a user from id
+//		@Description	Returns a user from id
+//		@ID				get-user-from-id
+//		@Tags			user
+//		@Produce		json
+//	 @Param          uid	  path		  int	true	"User ID"
+//		@Success		200	  {object}	  models.User
+//		@Router			/api/users/{uid}  [get]
 func (u *UserController) GetUser(c echo.Context) error {
 	userID := c.Param("uid")
 	user, err := u.userService.GetUser(userID)
@@ -46,6 +55,16 @@ func (u *UserController) GetUser(c echo.Context) error {
 	return c.JSON(http.StatusOK, user)
 }
 
+// GetUserFromUsername godoc
+//
+//		@Summary		Gets a user from username
+//		@Description	Returns a user from username
+//		@ID				get-user-from-username
+//		@Tags			user
+//		@Produce		json
+//	 @Param          username	  path  string	true	"Username"
+//		@Success		200	  {object}	  models.User
+//		@Router			/api/users/username/{username}  [get]
 func (u *UserController) GetUserFromUsername(c echo.Context) error {
 	username := c.Param("username")
 	user, err := u.userService.GetUserFromUsername(username)
@@ -57,6 +76,16 @@ func (u *UserController) GetUserFromUsername(c echo.Context) error {
 	return c.JSON(http.StatusOK, user)
 }
 
+// GetUserFromFirebaseId godoc
+//
+//		@Summary		Gets a user from firebase id
+//		@Description	Returns a user from firebase id
+//		@ID				get-user-from-firebase-id
+//		@Tags			user
+//		@Produce		json
+//	 @Param          firebaseid	  path  string	true	"FirebaseID"
+//		@Success		200	  {object}	  models.User
+//		@Router			/api/users/firebase/{firebaseid}  [get]
 func (u *UserController) GetUserFromFirebaseID(c echo.Context) error {
 	firebaseID := c.Param("firebase_id")
 	user, err := u.userService.GetUserFromFirebaseID(firebaseID)
@@ -68,6 +97,16 @@ func (u *UserController) GetUserFromFirebaseID(c echo.Context) error {
 	return c.JSON(http.StatusOK, user)
 }
 
+// GetUserPersona godoc
+//
+//		@Summary		Gets a user persona from user id
+//		@Description	Returns a persona from user id
+//		@ID				get-user-persona
+//		@Tags			user
+//		@Produce		json
+//	 @Param          uid	  path  string	true	"UserID"
+//		@Success		200	  {object}	  models.Persona
+//		@Router			/api/users/{uid}/persona  [get]
 func (u *UserController) GetUserPersona(c echo.Context) error {
 	userID := c.Param("uid")
 	persona, err := u.userService.GetUserPersona(userID)
@@ -79,6 +118,16 @@ func (u *UserController) GetUserPersona(c echo.Context) error {
 	return c.JSON(http.StatusOK, persona)
 }
 
+// GetUserProfile godoc
+//
+//		@Summary		Gets a user profile from user id
+//		@Description	Returns a profile from user id
+//		@ID				get-user-profile
+//		@Tags			user
+//		@Produce		json
+//	 @Param          uid	  path  string	true	"UserID"
+//		@Success		200	  {object}	  models.Profile
+//		@Router			/api/users/{uid}/profile  [get]
 func (u *UserController) GetUserProfile(c echo.Context) error {
 	userID := c.Param("uid")
 	profile, err := u.userService.GetUserProfile(userID)
@@ -90,6 +139,17 @@ func (u *UserController) GetUserProfile(c echo.Context) error {
 	return c.JSON(http.StatusOK, profile)
 }
 
+// CreateUser godoc
+//
+//		@Summary		Creates a user
+//		@Description	Creates a user
+//		@ID				post-user
+//		@Tags			user
+//	 @Accept         json
+//		@Produce		json
+//		@Param			account	body		docmodels.UserDTO	 true	"User"
+//		@Success		200	  {object}	    models.User
+//		@Router			/api/users/  [post]
 func (u *UserController) CreateUser(c echo.Context) error {
 	var user models.User
 
@@ -103,7 +163,7 @@ func (u *UserController) CreateUser(c echo.Context) error {
 
 	createdUser, err := u.userService.CreateUser(user)
 	if err != nil {
-		return c.JSON(http.StatusInternalServerError, "Failed to create the user")
+		return c.JSON(http.StatusInternalServerError, "Failed to create the user"+err.Error())
 	}
 
 	return c.JSON(http.StatusOK, createdUser)
@@ -123,6 +183,17 @@ func (u *UserController) InitializeUserProgress(c echo.Context) error {
 	})
 }
 
+// UpdateUser godoc
+//
+//		@Summary		Creates a user
+//		@Description	Creates a user
+//		@ID				post-user
+//		@Tags			user
+//	 @Accept         json
+//		@Produce		json
+//		@Param			account	body		docmodels.UserDTO	 true	"User"
+//		@Success		200	  {object}	    models.User
+//		@Router			/api/users/  [post]
 func (u *UserController) UpdateUser(c echo.Context) error {
 	var user models.User
 
